--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -15,10 +15,11 @@ jobs:
         python-version: 3.7
 
     - name: Install dependencies
-      run: | 
+      run: |
+        cd api_yamdb/ 
         python -m pip install --upgrade pip 
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
-        pip install -r requirements.txt 
+        pip install -r requirements.txt
 
     - name: Test with flake8 and django tests
       run: |
