--- a/.github/workflow/yamdb_workflow.yml
+++ b/.github/workflow/yamdb_workflow.yml
@@ -21,10 +21,9 @@ jobs:
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
         pip install -r requirements.txt
 
-    - name: Test with flake8 and django tests
-      run: |
+    #- name: Test with flake8 and django tests
+     # run: |
         # запуск проверки проекта по flake8
-        python -m flake8
-        # перейти в папку, содержащую manage.py — 
-        # запустить написанные разработчиком тесты
+      #  python -m flake8
+        # запустить тесты
         pytest
