--- a/.github/workflow/yamdb_workflow.yml
+++ b/.github/workflow/yamdb_workflow.yml
@@ -26,4 +26,25 @@ jobs:
         # запуск проверки проекта по flake8
       #  python -m flake8
         # запустить тесты
-        pytest
+      #  pytest
+
+  build_and_push_to_docker_hub:
+    name: Push Docker image to Docker Hub
+    runs-on: ubuntu-latest
+    needs: tests
+    steps:
+    - name: Check out the repo
+      uses: actions/checkout@v2 
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1 
+    - name: Login to Docker 
+      uses: docker/login-action@v1 
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }} 
+        password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Push to Docker Hub
+        # Пуш образа в Docker Hub 
+      uses: docker/build-push-action@v2 
+      with:
+        push: true
+        tags: dimdolino/yamdb_final:latest
