--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -16,7 +16,6 @@ jobs:
 
     - name: Install dependencies
       run: |
-        cd api_yamdb/ 
         python -m pip install --upgrade pip 
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
         pip install -r requirements.txt
@@ -43,8 +42,7 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }} 
         password: ${{ secrets.DOCKER_PASSWORD }}
     - name: Push to Docker Hub
-        # Пуш образа в Docker Hub 
       uses: docker/build-push-action@v2 
       with:
         push: true
-        tags: dimdolino/yamdb_final:latest
+        tags: ${{ secrets.DOCKER_USERNAME }}/yamdb_final:latest
