--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -1,4 +1,4 @@
-name: Django-app workflow
+name: yamdb_workflow
 
 on: [push]
 
@@ -16,6 +16,7 @@ jobs:
 
     - name: Install dependencies
       run: |
+        cd api_yamdb/
         python -m pip install --upgrade pip 
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
         pip install -r requirements.txt
@@ -42,6 +43,8 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }} 
         password: ${{ secrets.DOCKER_PASSWORD }}
     - name: Push to Docker Hub
+      run:|
+        cd api_yamdb/
       uses: docker/build-push-action@v2 
       with:
         push: true
