--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -42,6 +42,9 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_USERNAME }} 
         password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Change Directory
+      run: |
+        cd api_yamdb/
     - name: Push to Docker Hub
       uses: docker/build-push-action@v2 
       with:
