--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -5,6 +5,7 @@ on:
     branches:
       [main, master]
   pull_request:
+    branches:
       [master]
   
 
@@ -31,9 +32,7 @@ jobs:
 
     - name: Test with flake8 and django tests
       run: |
-        # запуск проверки проекта по flake8
         python -m flake8
-        # запустить тесты
         pytest
 
   build_and_push_to_docker_hub:
