--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -1,13 +1,9 @@
 name: Django-app workflow
 
-on:
-  push:
-    branches:
-      [main, master]
+on: push:
+    branches: [main, master]
   pull_request:
-    branches:
-      [master]
-  
+    branches: [master]
 
 jobs:
   tests: 
@@ -32,7 +28,9 @@ jobs:
 
     - name: Test with flake8 and django tests
       run: |
+        # запуск проверки проекта по flake8
         python -m flake8
+        # запустить тесты
         pytest
 
   build_and_push_to_docker_hub:
