--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -1,12 +1,6 @@
 name: Django-app workflow
 
-on:
-  push:
-    branches:
-      [main, master]
-  pull_request:
-    branches:
-      [master]
+on: push
   
 
 jobs:
@@ -36,6 +30,9 @@ jobs:
         pytest
 
   build_and_push_to_docker_hub:
+    on: 
+      push:
+        branches: [main, master]
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     needs: tests
