--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -1,12 +1,9 @@
 name: Django-app workflow
 
-on: push:
-    branches: [main, master]
-  pull_request:
-    branches: [master]
+on: [push]
 
 jobs:
-  tests: 
+  tests:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -34,6 +31,8 @@ jobs:
         pytest
 
   build_and_push_to_docker_hub:
+    on: push:
+         branches: [main, master]
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     needs: tests
