--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -33,9 +33,7 @@ jobs:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     needs: tests
-      on: 
-        push:
-          branches: [main, master]
+    if: github.ref == 'refs/heads/develop'
     steps:
     - name: Check out the repo
       uses: actions/checkout@v2 
