--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -34,9 +34,7 @@ jobs:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     needs: tests
-      on:
-        push:
-          branches: [main, master]
+    if: github.ref == 'refs/heads/master'
     steps:
     - name: Check out the repo
       uses: actions/checkout@v2 
